--- a/Synapse.Handlers.Ldap/Syanpse.Services.LdapApi/Syanpse.Services.LdapApi.csproj
+++ b/Synapse.Handlers.Ldap/Syanpse.Services.LdapApi/Syanpse.Services.LdapApi.csproj
@@ -70,6 +70,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Synapse.Ldap.Core\Synapse.Ldap.Core.csproj">
+      <Project>{e27a474d-c3cc-4dd6-a9b4-5d815ea14aa0}</Project>
+      <Name>Synapse.Ldap.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
