--- a/Synapse.Handlers.Ldap/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ad.cs" />
+    <Compile Include="HandlerParameters.cs" />
     <Compile Include="pocos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
