--- a/Synapse.Handlers.Ldap/Syanpse.Services.LdapApi/packages.config
+++ b/Synapse.Handlers.Ldap/Syanpse.Services.LdapApi/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package id="Synapse.Core.Signed" version="0.1.17130.0-beta" targetFramework="net452" />
+  <package id="Synapse.Core.Signed" version="0.1.17135.0-beta" targetFramework="net452" />
   <package id="Synapse.Server.Extensibility" version="0.1.17130.0-beta" targetFramework="net452" />
+  <package id="Synapse.Server.HttpClient" version="0.1.17130.0-beta" targetFramework="net452" />
   <package id="YamlDotNet.Signed" version="4.0.0" targetFramework="net452" />
 </packages>
