--- a/Synapse.Handlers.Ldap/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
@@ -30,9 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Synapse.Core">
+      <HintPath>..\..\..\..\synapse.core.net\Synapse.Core\bin\Debug\Synapse.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,10 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ad.cs" />
+    <Compile Include="Classes\UserPrincipal.cs" />
+    <Compile Include="DirectoryServices.cs" />
     <Compile Include="HandlerParameters.cs" />
     <Compile Include="pocos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Classes\SecurityPrincipal.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
