cleaning up structure

--- a/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Plans\GetPrincipal.yaml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Synapse.Ldap.Core\Synapse.Ldap.Core.csproj">
@@ -65,6 +66,7 @@
       <Name>Synapse.Ldap.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
