--- a/Synapse.Handlers.Ldap/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
@@ -48,9 +48,11 @@
     <Compile Include="Classes\GroupPrincipal.cs" />
     <Compile Include="Classes\Principal.cs" />
     <Compile Include="Classes\UserPrincipal.cs" />
-    <Compile Include="DirectoryServices.cs" />
+    <Compile Include="Runtime\Group.cs" />
+    <Compile Include="Runtime\User.cs" />
+    <Compile Include="Runtime\DirectoryServices.cs" />
     <Compile Include="HandlerParameters.cs" />
-    <Compile Include="pocos.cs" />
+    <Compile Include="Classes\Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\SecurityPrincipal.cs" />
   </ItemGroup>
