--- a/Synapse.Handlers.Ldap/Syanpse.Services.LdapApi/Synapse.Services.LdapApi.csproj
+++ b/Synapse.Handlers.Ldap/Syanpse.Services.LdapApi/Synapse.Services.LdapApi.csproj
@@ -72,6 +72,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrgUnit.cs" />
+    <Compile Include="Group.cs" />
+    <Compile Include="User.cs" />
     <Compile Include="LdapApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
