--- a/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap/Plans/GetOrgUnit.yaml
+++ b/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap/Plans/GetOrgUnit.yaml
@@ -1,8 +1,13 @@
-Name: GetPrincipal
+Name: GetOrgUnit
 Actions:
 - Handler:
     Type: Synapse.Handlers.Ldap:LdapHandler
+    Config:
+      Values:
+        LdapRoot: LDAP://DC=bp1,DC=ad,DC=bp,DC=com
   Parameters:
+    Values:
+      Type: OrganizationalUnit
     Dynamic:
     - Name: name
       Path: Name
