--- a/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
+++ b/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Synapse.Core">
-      <HintPath>..\..\..\..\synapse.core.net\Synapse.Core\bin\Debug\Synapse.Core.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
@@ -58,6 +55,9 @@
     <Compile Include="Classes\Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\SecurityPrincipal.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
