--- a/Synapse.Ldap.Tests/Synapse.Ldap.Tests.csproj
+++ b/Synapse.Ldap.Tests/Synapse.Ldap.Tests.csproj
@@ -49,10 +49,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OrganizationUnitTests.cs" />
+    <Compile Include="UserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
