Added codes for user creation and modification.

--- a/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LdapHandler.cs" />
+    <Compile Include="LdapUserHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
