--- a/Synapse.Ldap.Tests/Synapse.Ldap.Tests.csproj
+++ b/Synapse.Ldap.Tests/Synapse.Ldap.Tests.csproj
@@ -50,8 +50,10 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.DirectoryServices.AccountManagement" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GroupTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OrganizationUnitTests.cs" />
     <Compile Include="UserTests.cs" />
