--- a/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSLGroupMembershipHandler.cs" />
     <Compile Include="LdapGroupHandler.cs" />
     <Compile Include="LdapHandler.cs" />
     <Compile Include="LdapUserHandler.cs" />
