--- a/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Classes\LdapHanderConfig.cs" />
     <Compile Include="Classes\LdapObjects\LdapOrganizationalUnit.cs" />
     <Compile Include="Classes\LdapObjects\LdapUser.cs" />
-    <Compile Include="CSLGroupMembershipHandler.cs" />
+    <Compile Include="GroupMembershipHandler.cs" />
     <Compile Include="LdapHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
