- Created custom "LdapException" class to categorize exception types. - Did generic "re-format" on classes to meet coding standards.

--- a/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
+++ b/Synapse.Ldap.Core/Synapse.Ldap.Core.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\LdapException.cs" />
     <Compile Include="Classes\DirectoryEntry.cs" />
     <Compile Include="Classes\OrgUnit.cs" />
     <Compile Include="Classes\GroupPrincipal.cs" />
