--- a/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Plans\QueryUser.yaml" />
     <None Include="Plans\GetOrgUnit.yaml" />
     <None Include="Plans\GetPrincipal.yaml" />
   </ItemGroup>
