- Implemented GetGroup and GetOrgUnit in Api. - Modified core to throw "NotFound" Ldap Exception when Group or OrgUnit isn't found.

--- a/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
@@ -65,9 +65,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Plans\QueryOrgUnit.yaml" />
+    <None Include="Plans\QueryGroup.yaml" />
     <None Include="Plans\QueryUser.yaml" />
-    <None Include="Plans\GetOrgUnit.yaml" />
-    <None Include="Plans\GetPrincipal.yaml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Synapse.Ldap.Core\Synapse.Ldap.Core.csproj">
