--- a/Syanpse.Services.LdapApi/Plans/QueryGroup.yaml
+++ b/Syanpse.Services.LdapApi/Plans/QueryGroup.yaml
@@ -1,8 +1,8 @@
-Name: QueryUserApi
-Description: Lookup Ldap User
+Name: QueryGroupApi
+Description: Lookup Ldap Group
 IsActive: true
 Actions:
-- Name: QueryUser
+- Name: QueryGroup
   Handler:
     Type: Synapse.Handlers.Ldap:LdapHandler
     Config:
@@ -16,11 +16,20 @@ Actions:
         PrettyPrint: false
         ReturnObjects: true
         SuppressOutput: false
+      Dynamic:
+      - Name: showgroups
+        Path: QueryGroupMembership
+      - Name: formattype
+        Path: OutputType
+      - Name: prettyprint
+        Path: PrettyPrint
+      - Name: returnobject
+        Path: ReturnObjects
   Parameters:
     Type: Yaml
     Values:
-      Users:
+      Groups:
       - Name: xxxxxx
     Dynamic:
     - Name: name
-      Path: Users[0]:Name
+      Path: Groups[0]:Name
