--- a/Synapse.Ldap.Tests/Synapse.Ldap.Tests.csproj
+++ b/Synapse.Ldap.Tests/Synapse.Ldap.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OrganizationUnitTests.cs" />
     <Compile Include="UserTests.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
