--- a/Syanpse.Services.LdapApi/Plans/RemoveUserFromGroup.yaml
+++ b/Syanpse.Services.LdapApi/Plans/RemoveUserFromGroup.yaml
@@ -14,7 +14,7 @@ Actions:
         QueryGroupMembership: true
         OutputType: Json
         PrettyPrint: false
-        ReturnObjects: true
+        ReturnObjects: false
         SuppressOutput: false
       Dynamic:
       - Name: showgroups
