--- a/Syanpse.Services.LdapApi/Plans/DeleteGroup.yaml
+++ b/Syanpse.Services.LdapApi/Plans/DeleteGroup.yaml
@@ -30,6 +30,9 @@ Actions:
     Values:
       Groups:
       - Name: xxxxxx
+        DistinguishedName: xxxxx
     Dynamic:
     - Name: name
       Path: Groups[0]:Name
+    - Name: distinguishedname
+      Path: Groups[0]:DistinguishedName
