Update API to modify Group Membership by DistinguishedName or by Name/Path

--- a/Syanpse.Services.LdapApi/Plans/AddGroupToGroup.yaml
+++ b/Syanpse.Services.LdapApi/Plans/AddGroupToGroup.yaml
@@ -30,10 +30,13 @@ Actions:
     Values:
       Groups:
       - Name: xxxxxxxx
+        DistinguishedName: xxxxxxxx
         Groups:
         - xxxxxxxx
     Dynamic:
     - Name: name
       Path: Groups[0]:Name
+    - Name: distinguishedname
+      Path: Groups[0]:DistinguishedName
     - Name: group
       Path: Groups[0]:Groups[0]:Value
