--- a/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Classes\LdapHandlerConfig.cs" />
     <Compile Include="Classes\LdapObjects\LdapOrganizationalUnit.cs" />
     <Compile Include="Classes\LdapObjects\LdapUser.cs" />
+    <Compile Include="Classes\LdapStatus.cs" />
     <Compile Include="GroupMembershipHandler.cs" />
     <Compile Include="LdapHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
