Created one to one mapping of request and return Ldap objects.   Return object can have multipe statuses in them (Create User, Add To Group A, Add To Group B)

--- a/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
+++ b/Synapse.Handlers.Ldap/Synapse.Handlers.Ldap.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\LdapHandlerResults.cs" />
+    <Compile Include="Classes\LdapObjectResult.cs" />
     <Compile Include="Classes\LdapObjects\LdapObject.cs" />
     <Compile Include="Classes\LdapObjects\LdapGroup.cs" />
     <Compile Include="Classes\LdapHandlerParameters.cs" />
