--- a/Syanpse.Services.ActiveDirectoryApi/packages.config
+++ b/Syanpse.Services.ActiveDirectoryApi/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package id="Synapse.Core.Signed" version="0.1.17166.0-beta" targetFramework="net452" />
+  <package id="Synapse.Core.Signed" version="0.1.17218.0-beta" targetFramework="net452" />
+  <package id="Synapse.Server.Extensibility" version="0.1.17218.0-beta" targetFramework="net452" />
   <package id="YamlDotNet.Signed" version="4.0.0" targetFramework="net452" />
 </packages>
