--- a/Synapse.Handlers.ActiveDirectory/Synapse.Handlers.ActiveDirectory.csproj
+++ b/Synapse.Handlers.ActiveDirectory/Synapse.Handlers.ActiveDirectory.csproj
@@ -35,7 +35,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Synapse.Core, Version=0.1.0.0, Culture=neutral, PublicKeyToken=a6de1cc56b73f982, processorArchitecture=MSIL">
-      <HintPath>..\packages\Synapse.Core.Signed.0.1.17166.0-beta\lib\net45\Synapse.Core.dll</HintPath>
+      <HintPath>..\packages\Synapse.Core.Signed.0.1.17218.0-beta\lib\net45\Synapse.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddSection.cs" />
     <Compile Include="Classes\ActiveDirectoryHandlerResults.cs" />
     <Compile Include="Classes\ActiveDirectoryObjectResult.cs" />
     <Compile Include="Classes\AdObjects\AdObject.cs" />
@@ -61,9 +62,14 @@
     <Compile Include="Classes\AdObjects\AdOrganizationalUnit.cs" />
     <Compile Include="Classes\AdObjects\AdUser.cs" />
     <Compile Include="Classes\ActiveDirectoryStatus.cs" />
+    <Compile Include="DeleteSection.cs" />
     <Compile Include="GroupMembershipHandler.cs" />
     <Compile Include="ActiveDirectoryHandler.cs" />
+    <Compile Include="GroupMembershipHandlerConfig.cs" />
+    <Compile Include="GroupMembershipRequest.cs" />
+    <Compile Include="GroupMembershipResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Result.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
