--- a/Syanpse.Services.ActiveDirectoryApi/Plans/QueryUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/QueryUser.yaml
@@ -29,10 +29,7 @@ Actions:
     Type: Yaml
     Values:
       Users:
-      - Name: xxxxxx
-        DistinguishedName: xxxxxx
+      - Identity: 
     Dynamic:
-    - Name: name
-      Path: Users[0]:Name
-    - Name: distinguishedname
-      Path: Users[0]:DistinguishedName
+    - Name: identity
+      Path: Users[0]:Identity
