Implemented Modify, AddToGroup and RemoveFromGroup for Users through API.

--- a/Syanpse.Services.ActiveDirectoryApi/Plans/CreateUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/CreateUser.yaml
@@ -53,9 +53,9 @@ Actions:
         GivenName: 
         MiddleName: 
         Surname: 
-        EmailAddress: xxxxxxxx
-        VoiceTelephoneNumber: xxxxxxxx
-        EmployeeId: xxxxxxxx
+        EmailAddress: 
+        VoiceTelephoneNumber: 
+        EmployeeId: 
 #       Other Fields
         Password: 
     Dynamic:
