--- a/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyUser.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/ModifyUser.yaml
@@ -11,10 +11,10 @@ Actions:
         LdapRoot: LDAP://DC=sandbox,DC=local
         Action: Modify
         RunSequential: false
-        QueryGroupMembership: false
+        QueryGroupMembership: true
         OutputType: Json
         PrettyPrint: false
-        ReturnObjects: false
+        ReturnObjects: true
         UseUpsert: true
         SuppressOutput: false
       Dynamic:
@@ -30,25 +30,84 @@ Actions:
     Type: Yaml
     Values:
       Users:
-      - Name: xxxxxxxx
-        Path: xxxxxxxx
-        DistinguishedName: xxxxxxxx
-        Password: xxxxxxxx
-        GivenName: xxxxxxxx
-        Surname: xxxxxxxx
-        Description: xxxxxxxx
+      - Identity: 
+#       Principal Fields
+        UserPrincipalName: 
+        SamAccountName: 
+        DisplayName: 
+        Description: 
+#       AuthenticationPrincipal Fields
+        Enabled: 
+        PermittedLogonTimes: 
+        AccountExpirationDate: 
+        SmartcardLogonRequired: 
+        DelegationPermitted: 
+        HomeDirectory: 
+        ScriptPath: 
+        PasswordNotRequired: 
+        PasswordNeverExpires: 
+        UserCannotChangePassword: 
+        AllowReversiblePasswordEncryption: 
+        HomeDrive: 
+#       UserPrincipal Fields
+        GivenName: 
+        MiddleName: 
+        Surname: 
+        EmailAddress: 
+        VoiceTelephoneNumber: 
+        EmployeeId: 
+#       Other Fields
+        Password: 
     Dynamic:
-    - Name: name
-      Path: Users[0]:Name
-    - Name: path
-      Path: Users[0]:Path
-    - Name: distinguishedname
-      Path: Users[0]:DistinguishedName
-    - Name: password
-      Path: Users[0]:Password
-    - Name: givenname
-      Path: Users[0]:GivenName
-    - Name: surname
-      Path: Users[0]:Surname
+#   Principal Fields
+    - Name: identity
+      Path: Users[0]:Identity
+    - Name: userprincipalname
+      Path: Users[0]:UserPrincipalName
+    - Name: samaccountname
+      Path: Users[0]:SamAccountName
+    - Name: displayname
+      Path: Users[0]:DisplayName
     - Name: description
       Path: Users[0]:Description
+#   AuthenticationPrincipal Fields
+    - Name: enabled
+      Path: Users[0]:Enabled
+    - Name: permittedlogontimes
+      Path: Users[0]:PermittedLogonTimes
+    - Name: accountexpirationdate
+      Path: Users[0]:AccountExpirationDate
+    - Name: smartcardlogonrequired
+      Path: Users[0]:SmartcardLogonRequired
+    - Name: delegationpermitted
+      Path: Users[0]:DelegationPermitted
+    - Name: homedirectory
+      Path: Users[0]:HomeDirectory
+    - Name: scriptpath
+      Path: Users[0]:ScriptPath
+    - Name: passwordnotrequired
+      Path: Users[0]:PasswordNotRequired
+    - Name: passwordneverexpires
+      Path: Users[0]:PasswordNeverExpires
+    - Name: usercannotchangepassword
+      Path: Users[0]:UserCannotChangePassword
+    - Name: allowreversiblepasswordencryption
+      Path: Users[0]:AllowReversiblePasswordEncryption
+    - Name: homedrive
+      Path: Users[0]:HomeDrive
+#   UserPrincipalFields
+    - Name: givenname
+      Path: Users[0]:GivenName
+    - Name: middlename
+      Path: Users[0]:MiddleName
+    - Name: surname
+      Path: Users[0]:Surname
+    - Name: emailaddress
+      Path: Users[0]:EmailAddress
+    - Name: voicetelephonenumber
+      Path: Users[0]:VoiceTelephoneNumber
+    - Name: employeeid
+      Path: Users[0]:EmployeeId
+#   Other Fields
+    - Name: password
+      Path: Users[0]:Password
