--- a/Syanpse.Services.ActiveDirectoryApi/Plans/QueryGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/QueryGroup.yaml
@@ -29,10 +29,7 @@ Actions:
     Type: Yaml
     Values:
       Groups:
-      - Name: xxxxxx
-        DistinguishedName: xxxxx
+      - Identity: xxxxxx
     Dynamic:
-    - Name: name
-      Path: Groups[0]:Name
-    - Name: distinguishedname
-      Path: Groups[0]:DistinguishedName
+    - Name: identity
+      Path: Groups[0]:Identity
