--- a/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveUserFromGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveUserFromGroup.yaml
@@ -29,14 +29,11 @@ Actions:
     Type: Yaml
     Values:
       Users:
-      - Name: xxxxxxxx
-        DistinguishedName: xxxxxxxx
+      - Identity: xxxxxxxx
         Groups:
         - xxxxxxxx
     Dynamic:
-    - Name: name
-      Path: Users[0]:Name
-    - Name: distinguishedname
-      Path: Users[0]:DistinguishedName
-    - Name: group
+    - Name: identity
+      Path: Users[0]:Identity
+    - Name: groupidentity
       Path: Users[0]:Groups[0]:Value
