--- a/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveGroupFromGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveGroupFromGroup.yaml
@@ -29,14 +29,11 @@ Actions:
     Type: Yaml
     Values:
       Groups:
-      - Name: xxxxxxxx
-        DistinguishedName: xxxxxxxx
+      - Identity: xxxxxxxx
         Groups:
         - xxxxxxxx
     Dynamic:
-    - Name: name
-      Path: Groups[0]:Name
-    - Name: distinguishedname
-      Path: Groups[0]:DistinguishedName
-    - Name: group
+    - Name: identity
+      Path: Groups[0]:Identity
+    - Name: groupidentity
       Path: Groups[0]:Groups[0]:Value
