--- a/Syanpse.Services.ActiveDirectoryApi/Plans/CreateOrgUnit.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/CreateOrgUnit.yaml
@@ -29,16 +29,10 @@ Actions:
     Type: Yaml
     Values:
       OrganizationalUnits:
-      - Name: xxxxxxxx
-        Path: xxxxxxxx
-        DistinguishedName: xxxxxxxx
+      - Identity: 
         Description: Created by Synapse
     Dynamic:
-    - Name: name
-      Path: OrganizationalUnits[0]:Name
-    - Name: path
-      Path: OrganizationalUnits[0]:Path
-    - Name: distinguishedname
-      Path: OrganizationalUnits[0]:DistinguishedName
+    - Name: identity
+      Path: OrganizationalUnits[0]:Identity
     - Name: description
       Path: OrganizationalUnits[0]:Description
