--- a/Syanpse.Services.ActiveDirectoryApi/Plans/QueryGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/QueryGroup.yaml
@@ -29,7 +29,7 @@ Actions:
     Type: Yaml
     Values:
       Groups:
-      - Identity: xxxxxx
+      - Identity: 
     Dynamic:
     - Name: identity
       Path: Groups[0]:Identity
