--- a/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveGroupFromGroup.yaml
+++ b/Syanpse.Services.ActiveDirectoryApi/Plans/RemoveGroupFromGroup.yaml
@@ -29,9 +29,9 @@ Actions:
     Type: Yaml
     Values:
       Groups:
-      - Identity: xxxxxxxx
+      - Identity: 
         Groups:
-        - xxxxxxxx
+        - 
     Dynamic:
     - Name: identity
       Path: Groups[0]:Identity
