- Split out the "PropertyType" class into its own file. - Add Generic "SetProperties" method to set any and all properties associated with a DirectoryObject. - Added "Properties" to Create and Modify methods for OrgUnits (Group and User coming soon) - Added a List of PropertyTypes to the generic ADObject that all Input Objects (User, Group and OrgUnit) inherit from. - Removed unused "DisplayName" property from OrgUnit Input class.

--- a/Synapse.ActiveDirectory.Core/Synapse.ActiveDirectory.Core.csproj
+++ b/Synapse.ActiveDirectory.Core/Synapse.ActiveDirectory.Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Classes\OrgUnit.cs" />
     <Compile Include="Classes\GroupPrincipal.cs" />
     <Compile Include="Classes\Principal.cs" />
+    <Compile Include="Classes\PropertyType.cs" />
     <Compile Include="Classes\UserPrincipal.cs" />
     <Compile Include="Runtime\Group.cs" />
     <Compile Include="Runtime\OrgUnit.cs" />
